tests/e2e/destructoring9.story
obj = {"foo": 1, "bar": 2, "car": 3}
b = "foo"
{ obj[b] } = obj
